# KiCAD-MCP-Server

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CHANGELOG_2025-10-26.md  CHANGELOG_2025-11-01.md  CHANGELOG_2025-11-05.md  CHANGELOG_2025-11-30.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  PHASE_2_COMPLETE.md  README.md  REBUILD_STATUS.md  download_jlcpcb.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup-macos.sh  setup-windows-opencode.ps1  setup-windows.ps1  test-router.js  verify_wiring_poc.py  vitest.config.ts
.devcontainer/: devcontainer.json
.github/: README.de.md  README.md  README.zh.md
.github/workflows/: ci-kicad10-selfhosted.yml  ci.yml
config/: linux-config.example.json  macos-config.example.json  opencode.json  vscode-mcp.example.json  windows-config.example.json
docs/: CI_SELF_HOSTED.md  CLIENT_CONFIGURATION.md  DOCKER.md  HEADLESS_AUTHORING.md  INDEX.md  IPC_BACKEND_STATUS.md  JLCPCB_INTEGRATION.md  JLCPCB_USAGE_GUIDE.md  KNOWN_ISSUES.md  LIBRARY_INTEGRATION.md  LINUX_COMPATIBILITY_AUDIT.md  PLATFORM_GUIDE.md  REALTIME_WORKFLOW.md  ROADMAP.md  ROUTER_ARCHITECTURE.md  ROUTER_QUICK_START.md  ROUTING_TOOLS_REFERENCE.md  SCHEMATIC_TOOLS_REFERENCE.md  STATUS_SUMMARY.md  TOOL_INVENTORY.md  UI_AUTO_LAUNCH.md  VISUAL_FEEDBACK.md  WINDOWS_TROUBLESHOOTING.md  mcp-router-guide.md
python/: _fix_perms.py  kicad_interface.py  test_ipc_backend.py
python/commands/: __init__.py  _hierplace.py  add_library_symbol_property.py  add_symbol_property.py  component.py  component_schematic.py  connection_schematic.py  datasheet_manager.py  design_rules.py  dynamic_symbol_loader.py  eagle.py  export.py  footprint.py  freerouting.py  hierarchical_place.py  jlcpcb.py  jlcpcb_downloader.py  jlcpcb_parts.py  jlcsearch.py  library.py  library_management.py  library_schematic.py  library_symbol.py  net_analysis.py  pcb_import.py  pin_locator.py  placement_optimizer.py  project.py  routing.py  schematic.py  schematic_analysis.py  schematic_batch.py  schematic_declutter.py  schematic_field_layout.py  schematic_handlers.py  schematic_hierarchy.py  schematic_lint.py  schematic_lint_grid.py  schematic_snap.py  schematic_text_utils.py  (+11 more)
python/kicad_api/: __init__.py  base.py  factory.py  ipc_backend.py  swig_backend.py
python/parsers/: kicad_mod_parser.py
python/resources/: __init__.py  resource_definitions.py
python/schemas/: __init__.py  tool_schemas.py
python/templates/: blank.kicad_sch  empty.kicad_sch  minimal.kicad_sch  template_with_symbols.kicad_sch  template_with_symbols_expanded.kicad_sch
python/tests/: conftest.py  test_delete_schematic_component.py  test_freerouting.py  test_move_with_wire_preservation.py  test_schematic_analysis.py  test_schematic_component_fields.py  test_schematic_tools.py  test_wire_connectivity.py  test_wire_junction_changes.py
python/utils/: __init__.py  interactive_schematic.py  kicad_cli.py  kicad_dru.py  kicad_process.py  kicad_project.py  kicad_roots.py  platform_helper.py  project_settings_guard.py
scripts/: auto_refresh_kicad.sh  gen_toolsets.py  generate_tool_annotations.py  install-linux.sh  kicad-mcp.sh  kicad_sch_reformat.py
src/: config.ts  index.ts  kicad-server.ts  library.ts  logger.ts  pcb.ts  schematic.ts  server.ts
src/kicad_mcp/: __init__.py  __main__.py  (+7 more)
tests/: __init__.py  conftest.py  test_add_gnd_stitching_vias.py  test_add_label_empty_schematic.py  test_add_library_symbol_property.py  test_add_mounting_hole.py  test_add_schematic_component.py  test_add_schematic_component_snap.py  test_add_schematic_text.py  test_add_symbol_property.py  test_add_wire_sub_sheet.py  test_assign_net_to_class.py  test_auto_save_guard.py  test_autoroute_best_of_n.py  test_autoroute_score.py  test_backend_metadata.py  test_backend_session_pinning.py  test_blank_template_no_seed.py  test_board_editing_closure_apis.py  test_board_origin.py  test_cairo_dll_preload_windows.py  test_case_sensitivity_warning.py  test_changelog_no_multiline_code_spans.py  test_check_clearance.py  test_check_courtyard_overlaps.py  test_close_project.py  test_component_bbox_courtyard.py  test_component_manager_legacy.py  test_connect_pins.py  test_create_project_paths.py  test_create_schematic_path.py  test_delete_schematic_component.py  test_dsn_netclass_export_real.py  test_eagle_import.py  test_edit_schematic_component_instances.py  test_erc_noise_filter.py  test_export_bom_schematic.py  test_export_cli.py  test_export_schematic_svg.py  test_freerouting.py  (+93 more)
tests-ts/: parts-registry.test.ts  registry.test.ts  tool-response.test.ts
(+119 files in other folders)
